Fix text overflowing on mobile view in modal

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -156,6 +156,9 @@ header {
     font-size: 12px;
 }
 
+.wrap-text {
+    word-wrap: break-word;
+}
 
 /* footer */
 
